<resources>
    <string name="app_name">iChef</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="shoppinglist">Shopping list</string>
    <string name="store_name">Specify store name here</string>
    <string name="new_ingredient">Add ingredient</string>
    <string name="save">Save</string>
    <string name="welcome_to_the_home_page">Welcome to the Home Page!</string>
    <string name="click_me">Click Me</string>
    <string name="purchased">Purchased</string>
    <string name="welcome_to_the_search_page">Welcome to the Search Page!</string>
    <string name="more_options">More options</string>
    <string name="purchased_button_pressed">Purchased button pressed</string>
    <string name="check_all_pressed">All ingredients checked</string>
    <string name="check_all_unpressed">All ingredients unchecked</string>
    <string name="add_new_pressed">Adding new items</string>
    <string name="add_at_least_one_child_item">Add at least one child item</string>
    <string name="store_cannot_be_empty">Store cannot be empty</string>
    <string name="nothing_to_tick_here">Nothing to tick here</string>
    <string name="nothing_is_ticked">Nothing is ticked</string>
    <string name="add_a_new_ingredient">Edit shopping list</string>
    <string name="ingredient_name">Ingredient name here</string>
    <string name="your_shopping_list_is_empty">Your shopping list is empty</string>
    <string name="start_adding_new_ingredients">Start adding new ingredients</string>
    <string name="store_deleted_successfully">Store deleted successfully</string>
    <string name="tomato">Tomato 🍅</string>
    <string name="potato">Potato 🥔</string>
    <string name="kiwi">Kiwi 🥝</string>
    <string name="apple">Apple 🍏</string>
    <string name="broccoli">Broccoli 🥦</string>
    <string name="avocado">Avocado 🥑</string>
    <string name="pad_thai">Pad Thai</string>
    <string name="aldi">Aldi</string>
    <string name="tesco">Tesco</string>
    <string name="french_toast">French toast</string>
    <string name="french_onion_soup">French Onion Soup</string>
    <string name="kaufland">Kaufland</string>
    <string name="options">Options</string>
    <string name="my_recipes">My Recipes</string>
    <string name="done_recipes">Cooked recipes</string>
    <string name="logout">Log out</string>
    <string name="favorite_recipes">Favorites</string>
    <string name="add_recipes">Create new recipe</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="filter_by_any_word">Filter by any word</string>
    <string name="include_ingredient">Include ingredient</string>
    <string name="exclude_ingredient">Exclude ingredient</string>
    <string name="include_filters_expand">Include Filters ▼</string>
    <string name="include_filters_collapse">Include Filters ▲</string>
    <string name="reset_include_filters">Reset Include Filters</string>
    <string name="select_desired_country">Select desired country</string>
    <string name="select_dish_type">Select dish type</string>
    <string name="select_price_range">Select price range</string>
    <string name="select_meal_type">Select meal type</string>
    <string name="select_your_diet_plan">Select your diet plan</string>
    <string name="exclude_filters_expand">Exclude Filters ▼</string>
    <string name="exclude_filters_collapse">Exclude Filters ▲</string>
    <string name="reset_exclude_filters">Reset Exclude Filters</string>
</resources>